# orbiter-kep

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  LICENSE  OrbiterKEP.cpp  OrbiterKEP.py  OrbiterKEPConfig.h  OrbiterKEPConfig.h.in  README.md  build.sh  build_with_deps.sh  cmake_install.cmake  install_manifest.txt  mongo.js  optimise.py  query_mongo.sh
GravityAssistMFD/: CMakeLists.txt  GravityAssistMFD.vcxproj.user.in
GravityAssistMFD/cmake/: FindProtobufC.cmake
GravityAssistMFD/include/: GravityAssistMFD.hpp  GravityAssistModule.h  resource.h
GravityAssistMFD/include/Dialog/: MGAFinder.hpp
GravityAssistMFD/include/MFD/: GravityAssistMFD.hpp
GravityAssistMFD/include/ModuleMessaging/: MGAModuleMessenger.h
GravityAssistMFD/include/Optimisation/: MGAPlan.hpp  Optimizer.hpp  SolutionDiskStore.hpp
GravityAssistMFD/src/: GravityAssistMFD.aps  GravityAssistMFD.cpp  GravityAssistMFD.rc  GravityAssistModule.cpp  MGAFinder.cpp  MGAFinder.h  RCa13536  resource.h
GravityAssistMFD/src/Dialog/: MGAFinder.cpp
GravityAssistMFD/src/MFD/: GravityAssistMFD.cpp
GravityAssistMFD/src/ModuleMessaging/: MGAModuleMessenger.cpp
GravityAssistMFD/src/Optimisation/: MGAPlan.cpp  Optimizer.cpp  SolutionDiskStore.cpp
OrbiterKEP/: CMakeLists.txt  Orbiterkep.cbp  Orbiterkep.layout
OrbiterKEP.xcodeproj/: project.pbxproj
OrbiterKEP/src/: OrbiterKEP.cpp
cmake/: FindLibBson.cmake  FindLibBsonCXX.cmake  FindLibMongoC.cmake  FindLibMongoCXX.cmake  FindProtobuf.bak  FindProtobufC.cmake  Findpagmo.cmake  Findpykep.cmake  Findtemplate.cmake
config/: OrbiterKEPConfig.h.in
examples/: cassini.sh  mariner10.sh
orbiterkep-lib/: CMakeLists.txt
orbiterkep-lib/include/db/: orbiter_db.h
orbiterkep-lib/include/model/: .param.h.swo  param.h
orbiterkep-lib/include/opt/: optimise-c.h  optimise-c.h.save-failed  optimise.h
orbiterkep-lib/include/plot/: pareto.h
orbiterkep-lib/include/problems/: mga_1dsm_transx.h  mga_transx.h  transx_problem.h
orbiterkep-lib/include/proto/: ext-c.h  ext.h
orbiterkep-lib/include/ps/: renderer.h
orbiterkep-lib/proto/: CMakeLists.txt  ext-c.h  ext.c  ext.cpp  ext.h  parameters.pb-c.c  parameters.pb-c.h  parameters.proto  solution.pb-c.c  solution.pb-c.h  solution.proto
orbiterkep-lib/src/db/: orbiter_db.cpp
orbiterkep-lib/src/model/: param.cpp
orbiterkep-lib/src/opt/: optimise-c.cpp  optimise.cpp
orbiterkep-lib/src/plot/: pareto.cpp
orbiterkep-lib/src/problems/: mga_1dsm_transx.cpp  mga_transx.cpp  transx_problem.cpp
orbiterkep-lib/src/proto/: CMakeLists.txt  ext-c.c  ext-c.cpp  ext.c  ext.cpp  parameters.proto  solution.proto
problems/: mga_transx.py  my_mga.py  my_mga_1dsm.py  my_prob.py
proto/: CMakeLists.txt  cmake_install.cmake  solution.pb-c.c  solution.pb-c.h  solution.pb.cc  solution.pb.h  solution.proto
python_legacy/: OrbiterKEP.py
python_legacy/problems/: mga_1dsm_transx.py  transx_problem.py
src/: CMakeLists.txt  cmake_install.cmake  optimise.cpp  optimise.h  optimise.py  param.cpp  param.h
src/mongo/: orbiter_db.cpp  orbiter_db.h
src/plot/: pareto.cpp  pareto.h
src/problems/: .transx_problem.h.swo  mga_1dsm_transx.cpp  mga_1dsm_transx.h  mga_1dsm_transx.py  mga_transx.cpp  mga_transx.h  transx_problem.cpp  transx_problem.h
