INCLUDE(FindProtobuf)
FIND_PACKAGE(Protobuf REQUIRED)
INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})

PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER solution.proto)

IF(BUILD_STATIC)
  UNSET(PROTOBUF_LIBRARY CACHE)

  find_library(PROTO_STATIC NAMES libprotobuf.a
    PATHS ${CMAKE_INSTALL_PREFIX}
    PATH_SUFFIXES lib
    NO_DEFAULT_PATHS
    )

  SET(PROTOBUF_LIBRARY ${PROTO_STATIC})

ENDIF()

ADD_LIBRARY(proto ${PROTO_HEADER} ${PROTO_SRC})
TARGET_LINK_LIBRARIES(proto ${PROTOBUF_LIBRARY})
