
INCLUDE(FindProtobuf)
FIND_PACKAGE(Protobuf REQUIRED)
FIND_PACKAGE(ProtobufC REQUIRED)

INCLUDE(GenerateExportHeader)

INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${PROTOBUFC_INCLUDE_DIRS})

#PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER PROTOFILES solution.proto parameters.proto EXPORT_MACRO orbiterkep_proto_EXPORT)
PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER solution.proto parameters.proto)
PROTOC(PARAMETERSC_SRC parameters.proto)
PROTOC(SOLUTIONC_SRC solution.proto)


SET(PROTOBUFC_SRC ${PARAMETERSC_SRC} ${SOLUTIONC_SRC})

SET(PROTO_HEADER ${PROTO_HEADER})

IF(BUILD_STATIC)
  find_library(PROTO_STATIC NAMES libprotobuf.a
    PATHS ${CMAKE_INSTALL_PREFIX}
    PATH_SUFFIXES lib
    NO_DEFAULT_PATHS
    )

  SET(PROTOBUF_LIBRARY ${PROTO_STATIC})
ENDIF()

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/..)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/..)

ADD_LIBRARY(orbiterkep-proto SHARED ${PROTO_SRC})
ADD_LIBRARY(orbiterkep-proto-c STATIC ${PROTOBUFC_SRC})

set_target_properties(orbiterkep-proto PROPERTIES POSITION_INDEPENDENT_CODE ON)
set_target_properties(orbiterkep-proto-c PROPERTIES POSITION_INDEPENDENT_CODE ON)

TARGET_LINK_LIBRARIES(orbiterkep-proto ${PROTOBUF_LIBRARIES})
TARGET_LINK_LIBRARIES(orbiterkep-proto-c ${PROTOBUFC_LIBRARIES})

# SET_TARGET_PROPERTIES(orbiterkep-proto PROPERTIES COMPILE_FLAGS "-Wl,--out-implib,orbiterkep-proto.dll.a")

GENERATE_EXPORT_HEADER( orbiterkep-proto
              BASE_NAME orbiterkep-proto
              EXPORT_MACRO_NAME orbiterkep-proto_EXPORT
              EXPORT_FILE_NAME orbiterkep-proto_Export.h
              STATIC_DEFINE orbiterkep-proto_BUILT_AS_STATIC
 )

#set_source_files_properties(${PROTO_SRC} ${PROTOBUFC_SRC}
    #PROPERTIES
    #COMPILE_FLAGS "-include ${CMAKE_CURRENT_BINARY_DIR}/orbiterkep-proto_Export.h")

SET(orbiterkep-proto_INCLUDES ${CMAKE_CURRENT_BINARY_DIR}/..
                              CACHE INTERNAL "orbiterkep-proto: Headers" FORCE)


INSTALL(TARGETS orbiterkep-proto DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
INSTALL(TARGETS orbiterkep-proto-c DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
INSTALL(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/
  DESTINATION ${CMAKE_INSTALL_PREFIX}/include/orbiterkep/proto
  FILES_MATCHING PATTERN "*.h")

